ProdIND/ProdPrograms/force-app/main/default/objects/Bl_Code_Details__c/Bl_Code_Details__c.object-meta.xml
<CustomObject>
    <label>Bl Code Details</label>
    <nameField>
        <label>Bl_Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bl Code Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>