ProdIND/ProdPrograms/force-app/main/default/objects/Bl_Code_Details__c/fields/Bl_Code__c.field-meta.xml
<CustomField>
    <fullName>Bl_Code__c</fullName>
    <externalId>true</externalId>
    <label>Bl Code</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>