ProdIND/ProdPrograms/force-app/main/default/objects/Bl_Code_Details__c/fields/BlCodeName__c.field-meta.xml
<CustomField>
    <fullName>BlCodeName__c</fullName>
    <formula>Bl_Code__c   &amp; &quot; - &quot;&amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BlCodeName</label>
    <type>Text</type>
</CustomField>