ProdIND/ProdPrograms/force-app/main/default/objects/Bl_Code_Details__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>5</length>
    <type>Text</type>
</CustomField>