ProdIND/ProdPrograms/force-app/main/default/objects/Bl_Code_Details__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <label>State_Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>