ProdIND/ProdPrograms/force-app/main/default/objects/Bl_Code_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bl_Code__c</columns>
    <columns>BlCodeName__c</columns>
    <columns>Geo_State_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bl_Code__c</field>
        <operation>equals</operation>
        <value>BEN300587</value>
    </filters>
    <label>All</label>
</ListView>